# treelogdefectsegmentation

./: .travis.yml  CMakeLists.txt  DefectSegmentation.cpp  DefectSegmentation.h  Main.cpp  README.md  SegmentationAbstract.cpp  SegmentationAbstract.h  colorizeMesh.cpp
Centerline/: Centerline.cpp  Centerline.h  CenterlineHelper.h
examples/: Redoak1-groundtruth.id
examples/run/: runAll.sh
